--- a/app/views/hooks/_view_account_login_top.html.erb
+++ b/app/views/hooks/_view_account_login_top.html.erb
@@ -2,9 +2,7 @@
 
 <% if Setting.plugin_redmine_omniauth_azure['azure_oauth_authentication'] %>
   <%= link_to oauth_azure_path(:back_url => back_url), :class => 'identity-provider-link' do %>
-    <%= button_tag :class => 'button-login' do %>
-      <%= image_tag('/plugin_assets/redmine_omniauth_azure/images/azure.svg', :alt => l(:login_via_azure)) %>
-      <%= content_tag :span, ('::before ' + l(:login_via_azure)), :class => 'button-login-text' %>
-    <% end %>
+    <%= image_tag('/plugin_assets/redmine_omniauth_azure/images/azure.svg', :alt => l(:login_via_azure)) %>
+    <%= content_tag :span, l(:login_via_azure) %>
   <% end %>
 <% end %>
