--- a/assets/stylesheets/buttons.css
+++ b/assets/stylesheets/buttons.css
@@ -1,23 +1,34 @@
-.button-login {
-  position: relative;
-  left: 45%;
-  display: inline-block;
-  border: 1px solid #999;
-  border-radius: 2px;
-  margin-top: 10px;
-  width: 135px;
-  height: 25px;
-  padding: 0;
+a.identity-provider-link {
+	border-bottom: 1px solid #cae3f2;
+	color: #236a97;
+	cursor: pointer;
+	outline: 0;
+	text-decoration: none;
+	transition: all .2s ease;
+	display: block;
+	width: auto;
+	line-height: 22px;
+	padding: 8px 12px;
+	border: 1px solid rgba(0, 0, 0, 0.15);
+	border-radius: 2px;
+	box-sizing: border-box;
+	background-color: rgb(51, 102, 153);
+	color: #fff;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
-.button-login-icon {
-  float: left;
-  height: 18px;
-  padding: 1px 0px 0px 4px;
+a.identity-provider-link > img {
+  padding-right: 12px;
+  vertical-align: top;
+  overflow: visible;
+  border: 0;
 }
 
-.button-login-text {
-  line-height: 21px;
-  background-image: -webkit-linear-gradient(bottom, #ddd, white);
-  font-size: 12px;
+a.identity-provider-link > span::before {
+	content: '';
+	opacity: 0.4;
+	border-left: 1px #b4b4b4 solid;
+	margin-right: 12px;
 }
